# els

./: CMakeLists.txt  LICENSE  files.cpp  files.h  grid.cpp  grid.h  main.cpp  make_strings.cpp  make_strings.h  parse_arguments.cpp  parse_arguments.h
outputs/: CMakeLists.txt  colors.cpp  colors.hpp  files_work.cpp  files_work.hpp  grid_output.cpp  grid_output.hpp  icons.cpp  icons.hpp  oneline.cpp  oneline.hpp  outputs.cpp  outputs.hpp
parse_arguments/: CMakeLists.txt  parse_arguments.cpp  parse_arguments.hpp
tests/: CMakeLists.txt
tests/parse_arguments_tests/: CMakeLists.txt  long_arguments.cpp  nothing.cpp  one_dash_string.cpp  only_path.cpp  parse_dificult_string.cpp  short_arguments.cpp
